[package]
name = "messtar"
version = "0.1.0"
edition = "2021"
description = "Messtar — custom encryption protocol built with X25519, HKDF and AES-256-GCM"
license = "MIT"
repository = "https://github.com/omnizs/messtar"
readme = "README.md"
keywords = ["encryption", "protocol", "cryptography", "aes-gcm", "x25519"]
categories = ["cryptography", "network-programming"]

[dependencies]
aes-gcm       = "0.10"
x25519-dalek  = "2.0"
sha2          = "0.10"
hkdf          = "0.12"
rand          = "0.8"
serde         = { version = "1", features = ["derive"] }
thiserror     = "1"
ed25519-dalek = { version = "2.0", features = ["rand_core", "zeroize"] }
zeroize       = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
