[package]
name = "messtar"
version = "0.3.0"
edition = "2021"
description = "Messtar — custom encryption protocol built with X25519, HKDF and AES-256-GCM"
license = "GPL-3.0"
repository = "https://github.com/omnizs/messtar"
readme = "README.md"
keywords = ["encryption", "protocol", "cryptography", "aes-gcm", "x25519"]
categories = ["cryptography", "network-programming"]

[features]
default = []
transport = ["dep:tokio", "dep:bincode"]

[dependencies]
aes-gcm       = "0.10.3"
x25519-dalek  = "2.0.1"
sha2          = "0.10.9"
hkdf          = "0.12.4"
rand          = "0.8.5"
serde         = { version = "1", features = ["derive"] }
thiserror     = "2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "zeroize"] }
zeroize       = { version = "1", features = ["derive"] }
subtle        = "2.6"
tokio         = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"], optional = true }
bincode       = { version = "1.3.3", optional = true }

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "tcp_demo"
path = "src/bin/tcp_demo.rs"
required-features = ["transport"]
