[package]
name = "messtar"
version = "0.4.2"
edition = "2021"
description = "Messtar — custom encryption protocol built with X25519, HKDF and AES-256-GCM"
license = "GPL-3.0-only"
repository = "https://github.com/omnizs/messtar"
readme = "README.md"
keywords = ["encryption", "protocol", "cryptography", "aes-gcm", "x25519"]
categories = ["cryptography", "network-programming"]

[features]
default = []
transport = ["dep:tokio", "dep:postcard"]

[dependencies]
aes-gcm       = "0.10.3"
x25519-dalek  = "2.0.1"
sha2          = "0.11.0"
hkdf          = "0.12.4"
rand_core     = { version = "0.6", features = ["getrandom"] }
serde         = { version = "1", features = ["derive"] }
thiserror     = "2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "zeroize"] }
zeroize       = { version = "1.8.2", features = ["derive"] }
tokio         = { version = "1.50.0", features = ["net", "io-util", "rt-multi-thread", "macros", "time"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"], optional = true }

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "tcp_demo"
path = "src/bin/tcp_demo.rs"
required-features = ["transport"]
